# tgbot

./: .gitignore  pyproject.toml  run.sh
locales/: db.json  lang.json  subscription_plans.json
refactored/src/telegram_bot/: config.py  main.py  user_data_store.py
refactored/src/telegram_bot/database/: __init__.py  db_manager.py  models.py
refactored/src/telegram_bot/handlers/: account.py  button.py  join_group.py  manager.py  menu_router.py  start.py  states.py  subscription.py  support.py
refactored/src/telegram_bot/handlers/man/: man_bot.py  man_handler.py  man_vip.py
refactored/src/telegram_bot/localization/: i18n.py
refactored/src/telegram_bot/scheduler/: jobs.py
refactored/src/telegram_bot/utils/: speed.py
src/telegram_bot/: config.py  main.py  user_data_store.py
src/telegram_bot/database/: crud.py  db.py  models.py
src/telegram_bot/handlers/: account.py  button.py  join_group.py  language.py  manager.py  menu_commands.py  menu_router.py  states.py  support.py
src/telegram_bot/handlers/man/: man_bot.py  man_handler.py  man_vip.py
src/telegram_bot/localization/: i18n.py
src/telegram_bot/utils/: logger.py  speed.py
test/: qq.py  test.py
